# karaoke_vf

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
data/: .gitkeep
docs/: PRD.md  api.md  architecture.md  boilerplate_guide.md  colab.md  colab_resouces.md  live-separation-core.md  live-web-dashboard.md  live-web-playback.md  logs_benchmark.md  pipeline.md  progressive-separation.md  separator-benchmark.md  weekly_plan_karaoke_beat_separation.md
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
scripts/: benchmark_live_capacity.py  benchmark_separators.py  colab_benchmark_resources.py  colab_run_separation.py  play_live_chunks.py  run_live_demo.py  run_live_separation.py  run_progressive_separation.py  run_separation.py  run_server.py
tests/: conftest.py
tests/integration/: test_api_jobs.py  test_live_chunk_files_api.py  test_live_continuous_playback_dry_run.py  test_live_jobs_api.py  test_live_playback_dry_run.py  test_live_separation_dry_run.py  test_progressive_separation_dry_run.py  test_separation_dry_run.py
tests/unit/: test_capacity_controller.py  test_colab_benchmark_resources.py  test_continuous_player.py  test_demucs_command.py  test_demucs_engine.py  test_job_repository.py  test_live_first_ready_log.py  test_live_job_manager.py  test_live_manifest.py  test_live_scheduler.py  test_live_source_factory.py  test_mdx_onnx_engine.py  test_playback_audio_queue.py  test_playback_chunk_loader.py  test_playback_crossfade.py  test_playback_manifest_watcher.py  (+12 more)
(+134 files in other folders)
