[project]
name = "app"
version = "0.1.0"
description = "Karaoke separation server and pipeline"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "demucs>=4.0.0",
    "yt-dlp>=2023.3.3",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "soundfile>=0.12.1",
    "torchcodec",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]
