[project]
name = "app"
version = "0.1.0"
description = "Karaoke separation server and pipeline"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "demucs>=4.0.0",
    "yt-dlp>=2023.3.3",
    "fastapi>=0.100.0,<0.129.0",
    "anyio>=4.0.0,<4.13.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "soundfile>=0.12.1",
    "torchcodec",
    "sounddevice>=0.4.6",
    "numpy>=1.20.0",
    "numba>=0.57.0",
    "llvmlite>=0.40.0",
    "audio-separator>=0.18.0",
]

[dependency-groups]
cpu = [
    "onnxruntime>=1.20.1",
]
gpu = [
    "onnxruntime-gpu==1.22.0; python_version >= '3.10'",
]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]
